[package]
name = "wasabi"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0"
edition = "2018"
#-----------------------------------------
description = "A crate that generates bindings and wrappers for wasabi-generated wasm files"
readme = "README.md"
repository = "https://github.com/appcypher/wasabi"
keywords = ["c", "cpp", "webassembly", "abi", "emscripten"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasabi"
homepage = "https://github.com/appcypher/wasabi"

[features]
debug = []
