[package]
name = "wasabi-generator"
version = "0.0.1"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
#-----------------------------------------
description = "A crate that generates bindings and wrappers for wasabi-generated wasm files"
readme = "README.md"
repository = "https://github.com/appcypher/wasabi"
keywords = ["c", "c++", "webassembly", "abi", "emscripten"]
categories = ["development-tools", "parser-implementations", "wasm"]
documentation = "https://github.com/appcypher/wasabi"
homepage = "https://github.com/appcypher/wasabi"

[dependencies]
wasmlite-parser = "0.0.1"

[lib]
